--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,24 @@
   <artifactId>flowparser</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>flowparser</name>
-  <description>Java base for flowdev</description>
+  <description>parser for the flow DSL</description>
 
   <dependencies>
     <dependency>
-<groupId>junit</groupId>
-<artifactId>junit</artifactId>
-<version>4.6</version>
-<scope>test</scope>
+		<groupId>org.flowdev</groupId>
+		<artifactId>base</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+    </dependency>
+	<dependency>
+	    <groupId>se.romanredz.mouse</groupId>
+	    <artifactId>mouse-runtime</artifactId>
+	    <version>1.5.1</version>
+	</dependency>
+    <dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>4.6</version>
+		<scope>test</scope>
     </dependency>
   </dependencies>
  
