Now we can generate the parser from PEG source with: java mouse.Generate -G src/main/peg/flowdsl.peg \   -D "src/main/java/org/flowdev/flowparser" \   -p org.flowdev.flowparser \   -P FlowParser -S FlowParserSemantics
This can be done via a normal eclipse 'Run Java Application'.

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,14 @@
 	    <artifactId>mouse-runtime</artifactId>
 	    <version>1.5.1</version>
 	</dependency>
+
+<!-- Not needed during runtime: -->
+	<dependency>
+	    <groupId>se.romanredz.mouse</groupId>
+	    <artifactId>mouse</artifactId>
+	    <version>1.5.1</version>
+		<scope>provided</scope>
+	</dependency>
     <dependency>
 		<groupId>junit</groupId>
 		<artifactId>junit</artifactId>
