--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,11 @@
 		<artifactId>base</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
     </dependency>
+    <dependency>
+		<groupId>net.sf.jopt-simple</groupId>
+		<artifactId>jopt-simple</artifactId>
+		<version>4.4</version>
+	</dependency>
 	<dependency>
 	    <groupId>se.romanredz.mouse</groupId>
 	    <artifactId>mouse-runtime</artifactId>
